--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/Assets/AssetStoreTools*
+﻿[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+Assets/AssetStoreTools*
 
 # Visual Studio 2015 cache directory
 /.vs/
@@ -25,6 +25,7 @@ ExportedObj/
 
 # Unity3D generated meta files
 *.pidb.meta
+*.pdb.meta
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
@@ -32,10 +33,3 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
-ProjectSettings/ProjectVersion.txt
-Packages/manifest.json.meta
-Assets/Sprite/Weapons/flèche.png.meta
-Assets/Scenes/BastienTest_REMOTE_2868.unity
-Assets/Scenes/BastienTest_LOCAL_2868.unity
-Assets/Scenes/BastienTest_BASE_2868.unity
-Assets/Scenes/BastienTest_BACKUP_2868.unity
