--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿[Ll]ibrary/
+[Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
 [Bb]uild/
@@ -33,3 +33,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+GameJam2018/.vs/GameJam2018/v15/sqlite3/storage.ide
