--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ sysinfo.txt
 GameJam2018/.vs/GameJam2018/v15/sqlite3/storage.ide
 GameJam2018/.vs/
 GameJam2018/.vscode/
+GameJam2018/Testwindows_Data/
